# INT20H-SupportAI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GENERATION_PROCESS.md  README.md  analyze.py  docker-compose.yml  generate.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
data/: analysis.json  analysis_stats.json  dataset.json  dataset_stats.json  test_20.json
docs/: ANALYSIS_PROCESS.md  GENERATION_PROCESS.md  PROJECT_STRUCTURE.md
src/analyzer/: engine.py  main.py  prompts.py
src/config/: constants.py  logger.py
src/generator/: engine.py  main.py  prompts.py
